src/test/ui/span/issue-36537.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/issue-36537.rs:14:10
   |
14 |     p = &a;
   |          ^ borrowed value does not live long enough
15 |     //~^ ERROR `a` does not live long enough
16 | }
   | - `a` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

